# Trident

./: LICENSE  README.md
llvm-2.9/lib/Transforms/: CMakeLists.txt  Makefile
llvm-2.9/lib/Transforms/AnalyzeCategory/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/AnalyzePropagation/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/BbCheckpoint/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/BbCheckpointQs/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/BbCheckpointTest/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/CFD/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/CallProfileExec/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/CmpProfile/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/CmpProfileValue/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/CmpType/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/CountBb/: CMakeLists.txt  Hello.cpp
llvm-2.9/lib/Transforms/CountBbInRet/: .Hello.cpp.swp  CMakeLists.txt  Hello.cpp
llvm-2.9/lib/Transforms/CountQsDistance/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/Coverage/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/CrashCounter/: CMakeLists.txt  Hello.cpp  crashcount
llvm-2.9/lib/Transforms/CrashLatency/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/DMR/: CMakeLists.txt  Hello.cpp  Hello.cpp.keep  Makefile
llvm-2.9/lib/Transforms/Duplication/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/DuplicationCheck/: Hello.cpp
llvm-2.9/lib/Transforms/DuplicationCheck.keep/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/DuplicationCount/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/DynTrace/: CMakeLists.txt  ChainNode.cpp  ChainNode.h  DynTrace.cpp  Makefile  Sdds.cpp  Sdds.h
llvm-2.9/lib/Transforms/FDL/: CMakeLists.txt  Hello.cpp  Makefile
llvm-2.9/lib/Transforms/FaultInjectionFunc/: CMakeLists.txt  Hello.cpp  Makefile
test/: config.py
(+1440 files in other folders)
