add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Hello)
add_subdirectory(CrashCounter)
#add_subdirectory(LAMP)
add_subdirectory(DynTrace)
add_subdirectory(LoadMarker)
add_subdirectory(ProfileTrace)
add_subdirectory(CrashLatency)
add_subdirectory(LoopDetector)
add_subdirectory(SmartFiProfile)
add_subdirectory(FaultInjectionFunc)
add_subdirectory(SmartFiProfileWithFunctionCall)
add_subdirectory(Duplication)
add_subdirectory(DMR)
add_subdirectory(DuplicationCheck)
add_subdirectory(GenericCheckpoint)
add_subdirectory(BbCheckpoint)
add_subdirectory(instrument_detector)
add_subdirectory(MemProfile)
add_subdirectory(FDL)
add_subdirectory(Liveness)
add_subdirectory(BbCheckpointTest)
add_subdirectory(IndvarDetector)
add_subdirectory(CountQsDistance)
add_subdirectory(BbCheckpointQs)
add_subdirectory(RecovProtect)
add_subdirectory(DuplicationCount)
add_subdirectory(TotalCount)
add_subdirectory(RecovProtectInline)
add_subdirectory(RecovProtectTest)
add_subdirectory(CFD)
add_subdirectory(ProfileInstructions)
add_subdirectory(Coverage)
add_subdirectory(ModelDdg)
add_subdirectory(ModelDdgFi)
add_subdirectory(AnalyzeCategory)
add_subdirectory(FindEndingInst)
add_subdirectory(CountBb)
add_subdirectory(CountBbInRet)
add_subdirectory(AnalyzePropagation)
add_subdirectory(SCS)
add_subdirectory(CmpProfile)
add_subdirectory(MemModeling)
add_subdirectory(CmpProfileValue)
add_subdirectory(VmsizeProfile)
add_subdirectory(CallProfileExec)
add_subdirectory(ScsEndSeq)
add_subdirectory(ShiftProfileValue)
add_subdirectory(CmpType)
add_subdirectory(NLTSolver)
add_subdirectory(LTSolver)
add_subdirectory(StaticInstModeling)
add_subdirectory(examineStoreAdress)
add_subdirectory(featureProfile)
add_subdirectory(featureExtract)
add_subdirectory(staticDepStore)
add_subdirectory(RecovProtectInlineFuncCheck)
add_subdirectory(InstSampling)
